day3/lab15/applications/playlists-api/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlists-api
  namespace: servicemesh-ns
  labels:
    app: playlists-api
spec:
  selector:
    matchLabels:
      app: playlists-api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: playlists-api
    spec:
      containers:
      - name: playlists-api
        image: stv707/service-mesh:playlists-api-v1
        imagePullPolicy : Always
        ports:
        - containerPort: 10010
---
apiVersion: v1
kind: Service
metadata:
  name: playlists-api
  namespace: servicemesh-ns
  labels:
    app: playlists-api
spec:
  type: ClusterIP
  selector:
    app: playlists-api
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 10010
