day3/lab15/applications/playlists-api/playlist-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: playlists-api-rewrite
  namespace: servicemesh-ns
spec:
  replacePathRegex:
    regex: "^/api/playlists(/|$)(.*)"
    replacement: "/$2"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: playlists-api-https-redirect
  namespace: servicemesh-ns
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playlists-api
  namespace: servicemesh-ns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: servicemesh-ns-playlists-api-https-redirect@kubernetescrd,servicemesh-ns-playlists-api-rewrite@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: mesh.app.stuXX.steven.asia # 🔁 Replace stuXX
    http:
      paths:
      - path: /api/playlists
        pathType: Prefix
        backend:
          service:
            name: playlists-api
            port:
              number: 80
  tls:
  - hosts:
    - mesh.app.stuXX.steven.asia # 🔁 Replace stuXX
    secretName: servicemesh-tls
